Improved UI layout of configure projects dialog